# powerlang

./: .clang-format  .cproject  .gitignore  .gitmodules  .project  GNUmakefile  Jenkinsfile  Makefile  README.md  README_STX.md  first-steps.st
.github/workflows/: blank.yml
bootstrap/: GNUmakefile  Makefile  README.md
bootstrap/scripts/: bootstrap-setup.st
c/: object_format.cpp  object_format.h  pst-kernel-classes.h  pst.h
debug/: GNUmakefile  powerlang-gdb.py.in
debug/powerlang/: __init__.py  cli.py  constants.py  objectmemory.py  printing.py  symbols.py  unwind.py  utils.py
docs/: Makefile  conf.py  index.rst
docs/bootstrap/: index.rst
docs/dmr/: abi.rst  dmr.rst
docs/pst/: index.rst
launcher/: CMakeLists.txt  GNUmakefile  HeapObject.cpp  HeapObject.h  ImageSegment.cpp  ImageSegment.h  Kernel.h  Launcher.cpp  Launcher.h  Main.cpp  Object.cpp  Object.h  Runtime.h  SmallInteger.h  Util.h  toolchain-mingw64.cmake
launcher/Posix/: Memory.cpp  Memory.h
launcher/Windows/: Memory.cpp  Memory.h
pst/: GNUmakefile  README.md  bast.sh  bastc.sh
pst/kernel/: ArrayedCollection.st  Character.st  Closure.st  (+17 more)
pst/kernel-micro/: Array.st  Behavior.st  Boolean.st  ByteArray.st  CharacterArray.st  Class.st  Collection.st  CompiledBlock.st  CompiledMethod.st  Fraction.st  IdentityDictionary.st  InlinedDictionary.st  Integer.st  LICENSE  LargeNegativeInteger.st  Magnitude.st  SmallInteger.st  String.st  Symbol.st  True.st  UndefinedObject.st  package.st
scripts/: init-for-bootstrapping.sh  init-for-simulation.sh  pharo-setup-image.st  pharo-setup-petrich.st
(+1162 files in other folders)
